--- a/src/pages/MyList.css
+++ b/src/pages/MyList.css
@@ -1,5 +1,5 @@
 .mylist-page {
-  padding-top: 120px;
+  padding-top: 150px; /* Increased to ensure navbar clearance */
   min-height: 100vh;
 }
 
